# bots_arm

./: CMakeLists.txt  Config.h  jointsCtrl.cpp  jointsCtrl.h  main.cpp  max.cpp  max.h  serial.cpp  serial.h
FTServo/: .SCSerial.h.swp  SCSerial.cpp  SCSerial.h  mill.cpp  mill.h
